Fixed compilation issue due to using a post-JDK8 API...